# antenna-tracker

./: .gitignore  Acceleration & Torque Calculations - Revised.xlsx  README.md
AntennaTrackerWS/: Dockerfile  docker-compose.yml  freshbuild.sh  launch.sh  phidgets.rules  requirements.txt  runsetup.sh  sbg_interpreter.py
AntennaTrackerWS/launch/: antenna_launch.py
AntennaTrackerWS/src/stepper_controller/: CMakeLists.txt  package.xml  setup.cfg  setup.py
AntennaTrackerWS/src/stepper_controller/stepper_controller/: stepper_actions.py  stepper_controller_node.py  stepper_services.py
AntennaTrackerWS/src/stepper_interfaces/: CMakeLists.txt  package.xml
AntennaTrackerWS/src/stepper_interfaces/action/: MoveToTargetPosition.action
AntennaTrackerWS/src/switches/: package.xml  setup.cfg  setup.py
AntennaTrackerWS/src/tracker_testing/: package.xml  setup.cfg  setup.py
AntennaTrackerWS/src/tracking_compute/: package.xml  setup.cfg  setup.py
Antenna_Tracker_Code/: Antenna.py  Main.py  MainWithThreads.py  Rocket.py  SharedStack.py  StepperControlNode.py  TestAntenna.py  ToDo.txt  gps1.csv  oldRocket.py
Antenna_Tracker_Code/Tests/: TestAntenna.py  TestMain.py  TestRocket.py  TestSharedStack.py
Antenna_Tracker_Code/__pycache__/: LimitSwitches.py
Antenna_Tracker_Code/antenna_tracker_poetry/: pyproject.toml
Antenna_Tracker_Code/antenna_tracker_poetry/antenna_tracker_poetry/: Antenna.py  AsyncAntenna.py  AsyncTest.py  OneAntenna.py  PredictionAlg.py  TestAntenna.py  TestQueueAntenna.py  TestSharedStack.py  __main__.py  oldAntenna.py
LegacyAntennaTrackerWS/antenna_tracker_poetry/antenna_tracker_poetry/: Rocket.py  TestRocket.py  ToDo.txt  __main__.py
(+16 files in other folders)
