[tool.poetry]
name = "antenna-tracker-poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
phidget22 = "^1.19.20240513"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
